--- a/notebooks/1_Region_of_interest/region_of_interest.ipynb
+++ b/notebooks/1_Region_of_interest/region_of_interest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,15 +226,77 @@
     "polygon_geom = Polygon(zip(lon_point_list, lat_point_list))\n",
     "\n",
     "# Create a GeoDataFrame with the polygon object\n",
-    "polygon_src = gpd.GeoDataFrame(index=[0], crs=crs_src, geometry=[polygon_geom])       \n",
+    "gdf = gpd.GeoDataFrame(index=[0], crs=crs_src, geometry=[polygon_geom])       \n",
     "\n",
     "# Reproject the GeoDataFrame to the destination CRS (needed only if you set your coordinates in WGS 84)\n",
-    "polygon_dst = polygon_src.to_crs(crs_dst)\n",
+    "gdf = gdf.to_crs(crs_dst)\n",
     "\n",
-    "display(polygon_dst)\n",
+    "display(gdf)\n",
     "\n",
     "# Check CRS of your polygon\n",
-    "print(f'ROI CRS : {polygon_dst.crs}')"
+    "print(f'ROI CRS : {gdf.crs}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add a name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>POLYGON ((627263.700 5590485.200, 637115.000 5...</td>\n",
+       "      <td>ROI_wallonia</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            geometry          name\n",
+       "0  POLYGON ((627263.700 5590485.200, 637115.000 5...  ROI_wallonia"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "gdf['name'] = 'ROI_wallonia'\n",
+    "\n",
+    "display(gdf)"
    ]
   },
   {
@@ -248,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +329,7 @@
    "source": [
     "fig, ax = plt.subplots(1, 1)\n",
     "\n",
-    "polygon_dst.boundary.plot(ax=ax)\n",
+    "gdf.boundary.plot(ax=ax)\n",
     "\n",
     "plt.box(False)\n"
    ]
@@ -294,7 +356,7 @@
    ],
    "source": [
     "if not os.path.isfile(roi_file):\n",
-    "    polygon_dst.to_file(filename=roi_file, driver='ESRI Shapefile')\n",
+    "    gdf.to_file(filename=roi_file, driver='ESRI Shapefile')\n",
     "    print(f'A new vector file is created : {roi_file}')\n",
     "\n",
     "else:\n",
