--- a/notebooks/6_Spectral_indices/spectral_indices.ipynb
+++ b/notebooks/6_Spectral_indices/spectral_indices.ipynb
@@ -304,7 +304,7 @@
     "            nir         = list_im_arr[3] # B08\n",
     "            swir        = list_im_arr[4] # B12\n",
     "            \n",
-    "            index_arr = (1-sqrt((redEdge_B6*redEdge_B7*nir)/red))*((swir-nir)/(sqrt(swir+nir))+1)\n",
+    "            index_arr = (1-np.sqrt((redEdge_B6*redEdge_B7*nir)/red))*((swir-nir)/(np.sqrt(swir+nir))+1)\n",
     "        \n",
     "        elif index_name == 'SWI':\n",
     "            ndvi = list_im_arr[0] # NDVI\n",
