--- a/notebooks/A_Zonal_Statistics/zonal_stats_continuous.ipynb
+++ b/notebooks/A_Zonal_Statistics/zonal_stats_continuous.ipynb
@@ -4,40 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Zonal Statistics\n",
-    "\n",
-    "`rasterstats` is a Python module for summarizing geospatial raster datasets based on vector geometries.\n",
-    "\n",
-    "Geospatial data typically comes in one of two data models:\n",
-    "- *rasters* which are similar to images with a regular grid of pixels whose values represent some spatial phenomenon (e.g. elevation)\n",
-    "- *vectors* which are entities with discrete geometries (e.g. state boundaries).\n",
-    "\n",
-    "This software, `rasterstats`, exists solely to extract information from geospatial raster data based on vector geometries.\n",
-    "\n",
-    "This involves zonal statistics: a method of summarizing and aggregating the raster values intersecting a vector geometry. For example, zonal statistics provides answers such as the mean precipitation or maximum elevation of an administrative unit.\n",
-    "\n",
-    "### Statistics\n",
-    "\n",
-    "By default, the `zonal_stats` function will return the following statistics\n",
-    "\n",
-    "- min\n",
-    "- max\n",
-    "- mean\n",
-    "- count\n",
-    "\n",
-    "Optionally, these statistics are also available.\n",
-    "\n",
-    "- sum\n",
-    "- std\n",
-    "- median\n",
-    "- majority\n",
-    "- minority\n",
-    "- unique\n",
-    "- range\n",
-    "- nodata\n",
-    "- percentile (see note below for details)\n",
-    "\n",
-    "https://pythonhosted.org/rasterstats/manual.html\n"
+    "# Zonal Statistics - categorical values"
    ]
   },
   {
