--- a/notebooks/interpolate_timeseries.ipynb
+++ b/notebooks/interpolate_timeseries.ipynb
@@ -9,14 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "All libraries successfully imported!\n"
+      "All libraries successfully imported!\n",
+      "Scipy : 1.3.3\n"
      ]
     }
    ],
@@ -29,10 +30,13 @@
     "from IPython.display import display\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
+    "import scipy as sp\n",
+    "import scipy.sparse\n",
+    "import scipy.linalg\n",
+    "from scipy.sparse.linalg import cg\n",
     "\n",
-    "\n",
-    "\n",
-    "print('All libraries successfully imported!')"
+    "print('All libraries successfully imported!')\n",
+    "print(f'Scipy : {sp.__version__}')"
    ]
   },
   {
@@ -1307,6 +1311,54 @@
     "        display(df_interp)\n",
     "\n",
     "        print('------------------')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il faut tout d'abord faire une interpolation linéaire avec la fonction Pandas resample() (attention à bien définir une colonne avec un format Datetime.datetime). Ensuite, les valeurs manquantes sont définies comme poids = 0 dans le vecteur de poids pour le whittaker. Le résultat est obtenu dans le vecteur z pour les dates du vecteur x.\n",
+    "\n",
+    "Voici la fonction Whittaker en python. A appliquer sur une série temporelle de reflectance y avec une vecteur de poids w et un lambda = 6 (valeur empirique communiquée par Tom)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def whitsmw(y, w, lmda): # rem: 2nd order\n",
+    "    # THIS FUNCTION DOES NOT SUPPORT NaN -> USE WEIGHT = 0 INSTEAD!!!\n",
+    "    m = len(y)\n",
+    "    E = sp.sparse.diags(w, 0)\n",
+    "    D = sp.sparse.diags([1,-2,1],[0,1,2], shape=(m-2, m), format=\"csr\")\n",
+    "    z = sp.sparse.linalg.cg(E + lmda * (D.transpose()).dot(D), y * w)\n",
+    "    # remove leading zeros?\n",
+    "    len_z = len(z[0])\n",
+    "    new_len = len(np.trim_zeros(w,'f'))\n",
+    "    diff = len_z-new_len\n",
+    "    if diff>0:\n",
+    "        z[0][:diff] = np.nan\n",
+    "    return z[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Linear interpolation\n",
+    "dti_val = df[['date','median']].set_index('date',drop=True)\n",
+    "upsampled = dti_val.resample('5D').mean() \n",
+    "## Whittaker\n",
+    "# Create weights\n",
+    "w = np.array((~upsampled['median'].isna())*1,dtype='double')\n",
+    "upsampled.loc[upsampled['median'].isna(),'median'] = 0 \n",
+    "# Apply filter\n",
+    "z = whitsmw(upsampled['median'].values, w, 6)\n",
+    "x = upsampled.index"
    ]
   },
   {
