--- a/notebooks/A_Zonal_Statistics/zonal_stats_continuous.ipynb
+++ b/notebooks/A_Zonal_Statistics/zonal_stats_continuous.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Zonal Statistics - categorical values"
+    "# Zonal Statistics - continuous values"
    ]
   },
   {
@@ -176,90 +176,6 @@
     "\n",
     "    # Write into a new shapefile\n",
     "    in_situ_with_ndvi_gdf.to_file(in_situ_ndvi_file)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Zonal Histograms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FID 1877\n",
-      "[0 2 4 7]\n",
-      "[561672    123      1    224]\n",
-      "FID 1878\n",
-      "[0 2 4 5 7]\n",
-      "[561312    684      6      5     13]\n",
-      "FID 1879\n",
-      "[0 2 4 5 7]\n",
-      "[561655     37     18      2    308]\n",
-      "FID 1880\n",
-      "[0 2 4 5 7]\n",
-      "[561742     40    226      3      9]\n",
-      "FID 3251\n",
-      "[0 2 4 7]\n",
-      "[561269    365     12    374]\n",
-      "FID 3252\n",
-      "[0 2 4 5 7]\n",
-      "[561194    330     64     33    399]\n",
-      "FID 15441\n",
-      "[0 2 3 4 5 7]\n",
-      "[561579    181     13    105     46     96]\n",
-      "FID 15607\n",
-      "[0 4 7]\n",
-      "[561730    271     19]\n",
-      "FID 15608\n",
-      "[0 2 4 7]\n",
-      "[561373      1      6    640]\n",
-      "FID 15609\n",
-      "[0 5 7]\n",
-      "[561421      9    590]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Open image with categorial value\n",
-    "im_file = f'{work_path}2_L2A_CLIPPED/T31UFS_20200116T105309_SCL_10m_ROI.tif'\n",
-    "\n",
-    "src = rasterio.open(im_file, \"r\")\n",
-    "\n",
-    "# Open vector with polygons\n",
-    "poly_file = in_situ_file\n",
-    "\n",
-    "gdf = gpd.read_file(poly_file)\n",
-    "\n",
-    "\n",
-    "for i in range(0,len(gdf))[0:10]:\n",
-    "    \n",
-    "    fid  = gdf.loc[i,'ID']\n",
-    "    geom = gdf.geometry[[i]]\n",
-    "    print(f'FID {fid}')\n",
-    "    \n",
-    "    # Crop the raster to the extent of the shape\n",
-    "    out_image, out_transform = rasterio.mask.mask(src, geom, crop=False)\n",
-    "\n",
-    "    out_image = out_image[0]\n",
-    "    #print(out_image.shape)\n",
-    "\n",
-    "    #plt.imshow(out_image, interpolation='none')\n",
-    "    #plt.show()\n",
-    "\n",
-    "    unique_elements, counts_elements = np.unique(out_image, return_counts=True)\n",
-    "    \n",
-    "    print(unique_elements)\n",
-    "    print(counts_elements)\n",
-    "\n",
-    "src.close()\n"
    ]
   }
  ],
