zonal stat cont

--- a/notebooks/A_Zonal_Statistics/zonal_stats_categorical.ipynb
+++ b/notebooks/A_Zonal_Statistics/zonal_stats_categorical.ipynb
@@ -247,7 +247,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute zonal statistics with rasterstats"
+    "## Compute zonal statistics"
    ]
   },
   {
