--- a/notebooks/3_In_situ_data/in_situ_data.ipynb
+++ b/notebooks/3_In_situ_data/in_situ_data.ipynb
@@ -67,6 +67,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Set parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "site = 'NAMUR'\n",
+    "year = '2020'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set filenames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crop_file     = f'{data_path}{site}_{year}_CROPLAND.shp'\n",
+    "non_crop_file = f'{data_path}{site}_{year}_NON_CROPLAND.shp'\n",
+    "\n",
+    "sigec_lut_xlsx = f'{lut_path}SIGEC_Sen4Stat_LUT.xlsx'\n",
+    "s4s_lut_xlsx   = f'{lut_path}crop_dictionary_new.xlsx'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reading shapefile\n",
     "\n",
     "With `GeoPandas` we can read a shapefile in a GeoDataFrame and apply many methods on it.\n",
@@ -290,13 +327,6 @@
     }
    ],
    "source": [
-    "crop_name     = 'NAMUR_2020_CROPLAND.shp'\n",
-    "non_crop_name = 'NAMUR_2020_NON_CROPLAND.shp'\n",
-    "\n",
-    "\n",
-    "crop_file     = f'{data_path}{crop_name}'\n",
-    "non_crop_file = f'{data_path}{non_crop_name}'\n",
-    "\n",
     "# Read a vector using GeoPandas (gpd) into the GeoDataFrame \"gdf\"\n",
     "crop_gdf     = gpd.read_file(crop_file)\n",
     "non_crop_gdf = gpd.read_file(non_crop_file)\n",
@@ -631,8 +661,6 @@
     }
    ],
    "source": [
-    "sigec_lut_xlsx = f'{lut_path}SIGEC_Sen4Stat_LUT.xlsx'\n",
-    "\n",
     "sigec_lut_df = pd.read_excel(sigec_lut_xlsx)\n",
     "\n",
     "display(sigec_lut_df.head())"
@@ -1048,8 +1076,6 @@
     }
    ],
    "source": [
-    "s4s_lut_xlsx = f'{lut_path}crop_dictionary_new.xlsx'\n",
-    "\n",
     "s4s_lut_df = pd.read_excel(s4s_lut_xlsx)\n",
     "\n",
     "display(s4s_lut_df.head())"
