--- a/notebooks/7_Classification/random_forest_classification.ipynb
+++ b/notebooks/7_Classification/random_forest_classification.ipynb
@@ -31,7 +31,6 @@
     "from rasterio import features\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import scipy\n",
     "import sklearn\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "#from sklearn.datasets import make_classification\n",
@@ -41,7 +40,6 @@
     "from IPython.display import display\n",
     "\n",
     "print('All libraries successfully imported!')\n",
-    "print(f'Scipy        : {scipy.__version__}')\n",
     "print(f'Scikit-learn : {sklearn.__version__}')"
    ]
   },
@@ -82,7 +80,7 @@
     "\n",
     "Path(classif_path).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "print(f'Classification path are set to : {classif_path}')"
+    "print(f'Classification path is set to : {classif_path}')"
    ]
   },
   {
@@ -112,6 +110,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Set filenames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_situ_cal_shp = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.shp'\n",
+    "in_situ_cal_tif = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.tif'\n",
+    "\n",
+    "classif_tif = f'{classif_path}{site}_{year}_CLASSIF_RF_with_NDVI.tif'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Prepare classification features associated to *in situ* data"
    ]
   },
@@ -119,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Rasterize *in situ* data shapefile"
+    "### 1.1 Rasterize *in situ* data calibration shapefile"
    ]
   },
   {
@@ -142,37 +159,37 @@
     }
    ],
    "source": [
-    "in_situ_cal_shp = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.shp'\n",
-    "in_situ_val_shp = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_VAL.shp'\n",
-    "\n",
-    "in_situ_cal_tif = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_CAL.tif'\n",
-    "in_situ_val_tif = f'{in_situ_path}{site}_{year}_IN_SITU_ROI_VAL.tif'\n",
-    "\n",
     "img_temp_tif = glob.glob(f'{im_path}*.tif')[0]\n",
     "\n",
     "print(f'Raster template file : {img_temp_tif}')\n",
     "\n",
+    "# Open the shapefile with GeoPandas\n",
     "\n",
-    "for shp, raster in zip([in_situ_cal_shp, in_situ_val_shp],[in_situ_cal_tif, in_situ_val_tif]):\n",
-    "    \n",
-    "    print(f'Rasterize starts : {shp}')\n",
+    "in_situ_gdf = gpd.read_file(in_situ_cal_shp)\n",
     "\n",
-    "    # Open the shapefile with GeoPandas\n",
+    "# Open the raster file you want to use as a template for rasterize\n",
     "\n",
-    "    in_situ_gdf = gpd.read_file(shp)\n",
+    "src = rasterio.open(img_temp_tif, \"r\")\n",
     "\n",
-    "    # Open the raster file you want to use as a template for rasterize\n",
+    "# Update metadata\n",
     "\n",
-    "    src = rasterio.open(img_temp_tif, \"r\")\n",
+    "out_meta = src.meta\n",
+    "out_meta.update(nodata=no_data)\n",
     "\n",
-    "    # Update metadata\n",
+    "crs_shp = str(in_situ_gdf.crs).split(\":\",1)[1]\n",
+    "crs_tif = str(src.crs).split(\":\",1)[1]\n",
     "\n",
-    "    out_meta = src.meta\n",
-    "    out_meta.update(nodata=no_data)\n",
+    "print(f'The CRS of in situ data is    : {crs_shp}')\n",
+    "print(f'The CRS of raster template is : {crs_tif}')\n",
+    "\n",
+    "if crs_shp == crs_tif:\n",
+    "    print(\"CRS are the same\")\n",
+    "\n",
+    "    print(f'Rasterize starts : {in_situ_cal_shp}')\n",
     "\n",
     "    # Burn the features into the raster and write it out\n",
     "\n",
-    "    dst = rasterio.open(raster, 'w+', **out_meta)\n",
+    "    dst = rasterio.open(in_situ_cal_tif, 'w+', **out_meta)\n",
     "    dst_arr = dst.read(1)\n",
     "\n",
     "    # This is where we create a generator of geom, value pairs to use in rasterizing\n",
@@ -183,17 +200,21 @@
     "    shapes = ((geom,value) for geom, value in zip(geom_col, code_col))\n",
     "\n",
     "    in_situ_arr = features.rasterize(shapes=shapes,\n",
-    "                                        fill=no_data,\n",
-    "                                        out=dst_arr,\n",
-    "                                        transform=dst.transform)\n",
+    "                                     fill=no_data,\n",
+    "                                     out=dst_arr,\n",
+    "                                     transform=dst.transform)\n",
     "\n",
     "    dst.write_band(1, in_situ_arr)\n",
+    "\n",
+    "    print(f'Rasterize is done : {in_situ_cal_tif}')\n",
     "\n",
     "    # Close rasterio objects\n",
     "    src.close()\n",
     "    dst.close()\n",
     "\n",
-    "    print(f'Rasterize is done : {raster}')\n"
+    "else:\n",
+    "    print('CRS are different --> repoject in-situ data shapefile with \"to_crs\"')\n",
+    "\n"
    ]
   },
   {
@@ -1000,8 +1021,6 @@
     }
    ],
    "source": [
-    "classif_tif = f'{classif_path}{site}_{year}_CLASSIF_RF_with_NDVI.tif'\n",
-    "\n",
     "print(f'Size of image : {class_prediction.shape}')\n",
     "\n",
     "# Open template image to get metadata\n",
